--- a/notebooks/nbeats_training.ipynb
+++ b/notebooks/nbeats_training.ipynb
@@ -110,7 +110,7 @@
     }
    ],
    "source": [
-    "# Imports (retain existing CPU device if already defined)\n",
+    "# Imports & core configuration (CPU-only, simplified for reproducibility)\n",
     "import os, json, math\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
@@ -120,22 +120,9 @@
     "from src.models.nbeats_module import NBeatsModule, NBeatsConfig\n",
     "from src.data.dataset_nbeats import PanelForecastDataset, PanelWindowConfig, split_dataset\n",
     "\n",
-    "# Only set device if not previously forced to CPU\n",
-    "if 'device' not in globals() or device.type != 'cpu':\n",
-    "    if torch.backends.mps.is_available() and torch.backends.mps.is_built():\n",
-    "        device = torch.device('mps')\n",
-    "        accelerator = 'mps'\n",
-    "        backend_note = 'Using Apple Silicon MPS backend'\n",
-    "    elif torch.cuda.is_available():\n",
-    "        device = torch.device('cuda')\n",
-    "        accelerator = 'gpu'\n",
-    "        backend_note = f'Using CUDA GPU: {torch.cuda.get_device_name(0)}'\n",
-    "    else:\n",
-    "        device = torch.device('cpu')\n",
-    "        accelerator = 'cpu'\n",
-    "        backend_note = 'Falling back to CPU'\n",
-    "else:\n",
-    "    backend_note = 'Preserving pre-set CPU device'\n",
+    "device = torch.device('cpu')\n",
+    "accelerator = 'cpu'\n",
+    "backend_note = 'CPU-only workflow (Mac M1 Pro) for deterministic, lean capstone demonstration.'\n",
     "\n",
     "print('PyTorch version:', torch.__version__)\n",
     "print('Lightning version:', pl.__version__)\n",
@@ -413,71 +400,6 @@
     "cfg_model = NBeatsConfig(input_length=INPUT_LENGTH, forecast_length=FORECAST_LENGTH, learning_rate=LEARNING_RATE, num_stacks=NUM_STACKS, num_blocks_per_stack=BLOCKS_PER_STACK, layer_width=LAYER_WIDTH, n_layers=N_LAYERS, dropout=DROPOUT)\n",
     "model = NBeatsModule(cfg_model).to(device)\n",
     "print(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "5d292d85",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model compiled successfully with torch.compile (mode=reduce-overhead).\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Optional experimental torch.compile step (PyTorch 2.x)\n",
-    "import torch\n",
-    "\n",
-    "if hasattr(torch, 'compile'):\n",
-    "    compile_mode = 'reduce-overhead'  # alternatives: 'max-autotune', 'default'\n",
-    "    try:\n",
-    "        # For MPS backend, fullgraph=False tends to be safer; dynamic shapes may break some passes.\n",
-    "        model = torch.compile(model, mode=compile_mode, fullgraph=False)\n",
-    "        print(f'Model compiled successfully with torch.compile (mode={compile_mode}).')\n",
-    "    except Exception as e:\n",
-    "        print('torch.compile failed:', type(e).__name__, str(e)[:300])\n",
-    "        print('Falling back to original (uncompiled) model.')\n",
-    "else:\n",
-    "    print('torch.compile not available in this PyTorch build.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "1c8941fe",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU-only mode: skipping torch.compile. Model remains uncompiled.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# CPU-only mode: skip torch.compile (no benefit vs risk of overhead here)\n",
-    "print('CPU-only mode: skipping torch.compile. Model remains uncompiled.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "8b23d934",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 📊 Metric Interpretation & Overfitting Guide (updated for scaled run)\n",
-    "# Refer to earlier explanations. After scaling model, monitor:\n",
-    "#  - train_loss vs val_loss divergence\n",
-    "#  - val_wape flattening\n",
-    "#  - potential instability if precision < 32 on MPS\n",
-    "# If OOM occurs, reduce BATCH_SIZE first, then LAYER_WIDTH.\n"
    ]
   },
   {
